# mini-dns-resolver

./: readme.md
authoritative_server/: app.py  app_test.py  pyproject.toml
client/: app.py  app_test.py  load_generator.py  pyproject.toml
common/: chaos.py  logger.py
tld_server/: app.py  app_test.py  pyproject.toml
