[project]
name = "client"
version = "0.1.0"
description = ""
authors = [
    {name = "Luuk Weiss",email = "luukweiss@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
